--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,47 @@
 version: '3.3'
 
 services:
-   db:
-     build:
-       context: .
-       dockerfile: Dockerfile
-     volumes:
-       - db_data:/var/lib/mysql
-     restart: always
-     environment:
-       MYSQL_ROOT_PASSWORD: somewordpress
-       MYSQL_DATABASE: wordpress
-       MYSQL_USER: wordpress
-       MYSQL_PASSWORD: wordpress
+    nginx:
+        build:
+            context: ./services/nginx
+            dockerfile: Dockerfile
+        restart: always
+        ports:
+            - "80:8000"
+            - "443:443"
+        volumes:
+            - ./services/blog/static:/static
+        depends_on:
+            - wordpress
 
-   wordpress:
-     depends_on:
-       - db
-     image: wordpress:latest
-     ports:
-       - "8000:80"
-     restart: always
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: wordpress
-       WORDPRESS_DB_PASSWORD: wordpress
+    db:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        volumes:
+          - db_data:/var/lib/mysql
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: somewordpress
+            MYSQL_DATABASE: wordpress
+            MYSQL_USER: wordpress
+            MYSQL_PASSWORD: wordpress
+
+    wordpress:
+        depends_on:
+            - db
+        image: wordpress:latest
+        expose:
+            - "80"
+        restart: always
+        volumes:
+            - ./conf/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+            - wp_data:/var/www/html/wp-content
+        environment:
+            WORDPRESS_DB_HOST: db:3306
+            WORDPRESS_DB_USER: wordpress
+            WORDPRESS_DB_PASSWORD: wordpress
+
 volumes:
     db_data:
+    wp_data:
